--- a/style.css
+++ b/style.css
@@ -3,27 +3,29 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-image: url("images/background.png");
+  background-image: url("images/96118.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   display: table;
+  margin-top: 0;
 }
 
 .mainHeader {
   margin-top: 30px;
   font-family: cursive, sans-serif;
-  font-size: 60px;
+  font-size: 3em;
   color: lightgreen;
 }
 
 .main {
-  background-image: url("images/paper.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
+  background-image: url("images/yellow-row.png");
+  background-size: 521px;
+  height: 164px;
   width: 70%;
-  margin: 50px auto;
+  margin: 15px auto;
+  border: 4px solid #caa472;
 }
 
 .forms input {
@@ -41,7 +43,7 @@ body {
   margin: 0 auto;
 }
 
-.btn-primary {
+.btn-warning .btn-success {
   margin: 0 5px;
   width: 130px;
 }
@@ -73,6 +75,12 @@ body {
   height: 220px;
   width: 200px;
   margin-right: 8px;
+  -webkit-animation-name: slideRight;
+          animation-name: slideRight;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease-in-out;
+          animation-timing-function: ease-in-out;
   -webkit-transition: -webkit-transform .2s;
   transition: -webkit-transform .2s;
   transition: transform .2s;
@@ -95,6 +103,28 @@ body {
   opacity: 1;
 }
 
+@-webkit-keyframes slideRight {
+  0% {
+    -webkit-transform: translateX(-150%);
+            transform: translateX(-150%);
+  }
+  100% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+}
+
+@keyframes slideRight {
+  0% {
+    -webkit-transform: translateX(-150%);
+            transform: translateX(-150%);
+  }
+  100% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+}
+
 .text-note {
   height: 110px;
   overflow: auto;
@@ -107,9 +137,43 @@ body {
   font-size: 14px;
 }
 
-@media screen and (min-width: 1000px) {
-  .forms {
-    padding-left: 90px;
+@media screen and (max-width: 1000px) {
+  .mainHeader {
+    font-size: 40px;
+  }
+}
+
+@media screen and (max-width: 433px) {
+  .mainHeader {
+    margin-top: 40px;
+  }
+  .forms input {
+    margin: 4px;
+    font-size: 12px;
+  }
+  .main {
+    height: 108px;
+  }
+  #firstForm label {
+    font-size: 12px;
+  }
+  #errorMsg {
+    font-size: 20px;
+  }
+  .note {
+    height: 150px;
+    width: 150px;
+  }
+  .note .fas {
+    font-size: 18px;
+  }
+  .text-note {
+    font-size: 12px;
+    height: 70px;
+    margin-top: 35px;
+  }
+  .date-note, .time-note {
+    font-size: 12px;
   }
 }
 /*# sourceMappingURL=style.css.map */
